--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Memory Game</title>
     <meta charset="UTF-8" />
+    <!-- CSS is in script file instead since linking it
+      here doesn't work for some reason -->
   </head>
 
   <body>
