header complete read the title lol

--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
   </head>
 
   <body>
-    <!-- Title -->
-    <div id="title">
-      <h1>Memory Game</h1>
-    </div>
+    <div id="header_container">
+      <header>
+        <!-- Title -->
+        <div id="title">
+          Memory Game
+        </div>
 
-    <!-- Size options for game board -->
-    <div id="size_options">
-      <p>size options go here</p>
+        <!-- Size options for game board -->
+        <div id="size_options">
+          <ul>
+            Small (4x4)
+          </ul>
+          <ul>
+            Medium (8x8)
+          </ul>
+          <ul>
+            Large (12x12)
+          </ul>
+        </div>
+      </header>
     </div>
 
     <!-- Text that is modified in script (just here as example) -->
