work on game board and panels begun template implemented, panels can be added dynamiically

--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@
     <!-- Text that is modified in script (just here as example) -->
     <div id="script_text"></div>
 
+    <!-- The area in which the game board and game options will reside -->
+    <div id="game_area">
+      <!-- The game board which will be populated with panels -->
+      <div id="game_board"></div>
+      <!-- Game options (TODO) -->
+    </div>
+
     <!-- The script -->
     <script src="src/index.js"></script>
+
+    <!-- Template for the game button!-->
+    <template>
+      <button class="game_panel">I AM PANEL</button>
+    </template>
   </body>
 </html>
