starting to add functionality to panels its not going well

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Template for the game button!-->
     <template>
-      <button class="game_panel">I AM PANEL</button>
+      <button class="game_panel" onclick="console.log(this.id)"></button>
     </template>
   </body>
 </html>
