gameboard now listens to clicks on panels, function works hooray

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
       <!-- Game options (TODO) -->
     </div>
 
-    <!-- The script -->
-    <script src="src/index.js"></script>
-
     <!-- Template for the game button!-->
     <template>
-      <button class="game_panel" onclick="console.log(this.id)"></button>
+      <button class="game_panel" id="panel_template"></button>
+      <!--onclick="flipPanel(this.id)"-->
     </template>
+
+    <!-- The script -->
+    <script src="src/index.js"></script>
   </body>
 </html>
