Game board sizes work now! Thank you my furry friends

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
         <!-- Size options for game board -->
         <div id="size_options">
-          <ul>
+          <ul id="size_option_small">
             Small (4x4)
           </ul>
-          <ul>
-            Medium (8x8)
+          <ul id="size_option_medium">
+            Medium (6x6)
           </ul>
-          <ul>
-            Large (12x12)
+          <ul id="size_option_large">
+            Large (8x8)
           </ul>
         </div>
       </header>
