Changing board size implemented hooray

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
         <!-- Size options for game board -->
         <div id="size_options">
-          <ul id="size_option_small">
+          <ul class="size_option_button" id="size_option_small">
             Small (4x4)
           </ul>
-          <ul id="size_option_medium">
+          <ul class="size_option_button" id="size_option_medium">
             Medium (6x6)
           </ul>
-          <ul id="size_option_large">
+          <ul class="size_option_button" id="size_option_large">
             Large (8x8)
           </ul>
         </div>
