buttons open and close accordingly also gave the buttons custom grafix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
     <!-- Template for the game button!-->
     <template>
-      <button class="game_panel" id="panel_template"></button>
+      <div class="game_panel" id="panel_template">
+        <span class="panel_text">A</span>
+      </div>
     </template>
 
     <!-- The script -->
