panels show correct symbol when opened, win condition checked and some other minor tweaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Template for the game button!-->
     <template>
       <div class="game_panel" id="panel_template">
-        <span class="panel_text">A</span>
+        <span class="panel_text"></span>
       </div>
     </template>
 
