Refactorings Added Game State, refactored overlay functionality and more

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <div id="game_status" class="information">
       <p>
         Time: <span id="timer">0:00:00</span> <br />
-        Pairs found: <span id="pairs_found">0 / 0</span>
+        Pairs found: <span id="pairs_found">0 / 0</span> <br />
+        <button id="win_button">Win</button> <!-- An automatic win button for testing -->
       </p>
     </div>
 
