Added notification element Added notification element in HTML and styled it in CSS. Also, size option buttons turn darker when pressed.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
           </ul>
         </div>
       </header>
+
+      <!-- Notification to confirm restart (hidden by default) -->
+      <div id="confirm-restart" class="notification hidden">
+        <span class="notif-text">There is an ongoing game. Are you sure you want to start a new one?</span>
+        <div class="notif-button-container">
+          <button id="confirm-restart-yes" class="notif-button">Yes</button>
+          <button id="confirm-restart-no" class="notif-button">No</button>
+        </div>
+      </div>
+
     </div>
 
     <div id="game_description" class="information">
