Mistake and match count display implemented Read title.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div id="game_stats" class="information">
       <p>
         Time: <span id="timer">0:00:00</span> <br />
-        Pairs found: <span id="pairs_found">0 / 0</span> <br />
-        Mistakes: <span id="pairs_found">0</span> <br />
+        Matches: <span id="matches">0 / 0</span> <br />
+        Mistakes: <span id="mistakes">0</span> <br />
         <button id="win_button">Win</button>
         <!-- An automatic win button for testing -->
       </p>
